--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -28,7 +28,7 @@ const posts = (await getCollection('blog')).sort(
       />
     </div>
 
-    <main class="px-4 py-12 max-w-4xl mx-auto relative">
+    <main class="px-4 py-12 relative">
       <h1 class="text-4xl font-bold mb-12 text-emerald-100">Latest Updates</h1>
       <section>
         <ul class="grid gap-8">
